--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -10,11 +10,11 @@
 
         <div class="itemTabs homeTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="index.html" class="lnkHomeHome">${TabHome}</a>
-                <a href="homelatest.html" class="lnkHomeLatest">${TabLatest}</a>
-                <a href="tvrecommended.html" class="lnkHomeNextUp">${TabNextUp}</a>
-                <a href="favorites.html" class="lnkHomeFavorites">${TabFavorites}</a>
-                <a href="tvupcoming.html" class="lnkHomeUpcoming">${TabUpcoming}</a>
+                <a href="index.html" class="lnkHomeHome"><i class="material-icons">home</i>${TabHome}</a>
+                <a href="homelatest.html" class="lnkHomeLatest"><i class="material-icons">new_releases</i>${TabLatest}</a>
+                <a href="tvrecommended.html" class="lnkHomeNextUp"><i class="material-icons">navigate_next</i>${TabNextUp}</a>
+                <a href="favorites.html" class="lnkHomeFavorites"><i class="material-icons">favorite</i>${TabFavorites}</a>
+                <a href="tvupcoming.html" class="lnkHomeUpcoming"><i class="material-icons">schedule</i>${TabUpcoming}</a>
             </div>
         </div>
 
@@ -44,9 +44,9 @@
         </div>
         <div class="itemTabs photoTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="photos.html" class="ui-btn-active lnkPhotoAlbums">${TabAlbums}</a>
-                <a href="photos.html?context=photos-photos" class="lnkPhotos">${TabPhotos}</a>
-                <a href="photos.html?context=photos-videos" class="lnkVideos">${TabVideos}</a>
+                <a href="photos.html" class="ui-btn-active lnkPhotoAlbums"><i class="material-icons">photo_album</i>${TabAlbums}</a>
+                <a href="photos.html?context=photos-photos" class="lnkPhotos"><i class="material-icons">photo</i>${TabPhotos}</a>
+                <a href="photos.html?context=photos-videos" class="lnkVideos"><i class="material-icons">videocam</i>${TabVideos}</a>
             </div>
         </div>
         <div id="tvShowsTabs" class="itemTabs" style="display: none;">
@@ -114,8 +114,8 @@
         </div>
         <div class="itemTabs channelTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="channelslatest.html" class="latestChannelItemsTab">${TabLatest}</a>
-                <a href="channels.html" class="ui-btn-active">${TabChannels}</a>
+                <a href="channelslatest.html" class="latestChannelItemsTab"><i class="material-icons">new_releases</i>${TabLatest}</a>
+                <a href="channels.html" class="ui-btn-active"><i class="material-icons">live_tv</i>${TabChannels}</a>
             </div>
         </div>
 
