--- a/MediaBrowser.WebDashboard/dashboard-ui/photos.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/photos.html
@@ -7,9 +7,9 @@
     <div id="photosPage" data-role="page" class="page libraryPage" data-require="scripts/photos,scripts/queryfilters">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="photos.html" class="ui-btn-active lnkPhotoAlbums">${TabAlbums}</a>
-            <a href="photos.html?context=photos-photos" class="lnkPhotos">${TabPhotos}</a>
-            <a href="photos.html?context=photos-videos" class="lnkVideos">${TabVideos}</a>
+            <a href="photos.html" class="ui-btn-active lnkPhotoAlbums"><i class="material-icons">photo_album</i>${TabAlbums}</a>
+            <a href="photos.html?context=photos-photos" class="lnkPhotos"><i class="material-icons">photo</i>${TabPhotos}</a>
+            <a href="photos.html?context=photos-videos" class="lnkVideos"><i class="material-icons">videocam</i>${TabVideos}</a>
         </div>
 
         <div data-role="content">
