--- a/MediaBrowser.WebDashboard/dashboard-ui/playlistedit.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/playlistedit.html
@@ -7,7 +7,7 @@
     <div id="playlistEditorPage" data-role="page" class="page libraryPage" data-require="scripts/playlistedit">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="playlists.html" class="ui-btn-active">${TabPlaylists}</a>
+            <a href="playlists.html" class="ui-btn-active"><i class="material-icons">menu</i>${TabPlaylists}</a>
         </div>
 
         <div data-role="content">
