--- a/MediaBrowser.WebDashboard/dashboard-ui/playlists.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/playlists.html
@@ -7,7 +7,7 @@
     <div id="playlistsPage" data-role="page" class="page libraryPage" data-require="scripts/playlists">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="#" class="ui-btn-active">${TabPlaylists}</a>
+            <a href="#" class="ui-btn-active"><i class="material-icons">menu</i>${TabPlaylists}</a>
         </div>
 
         <div data-role="content">
