--- a/MediaBrowser.WebDashboard/dashboard-ui/tvupcoming.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvupcoming.html
@@ -6,11 +6,11 @@
 <body>
     <div id="tvUpcomingPage" data-role="page" class="page libraryPage backdropPage" data-backdroptype="series" data-require="scripts/tvupcoming">
         <div class="libraryViewNav globalNav" style="display: none;">
-            <a href="index.html">${TabHome}</a>
-            <a href="homelatest.html">${TabLatest}</a>
-            <a href="tvrecommended.html">${TabNextUp}</a>
-            <a href="favorites.html">${TabFavorites}</a>
-            <a href="#" class="ui-btn-active">${TabUpcoming}</a>
+            <a href="index.html"><i class="material-icons">home</i>${TabHome}</a>
+            <a href="homelatest.html"><i class="material-icons">new_releases</i>${TabLatest}</a>
+            <a href="tvrecommended.html"><i class="material-icons">navigate_next</i>${TabNextUp}</a>
+            <a href="favorites.html"><i class="material-icons">favorite</i>${TabFavorites}</a>
+            <a href="#" class="ui-btn-active"><i class="material-icons">schedule</i>${TabUpcoming}</a>
         </div>
         <div class="libraryViewNav scopedLibraryViewNav" style="display: none;">
             <a href="tvrecommended.html">${TabSuggestions}</a>
