--- a/MediaBrowser.WebDashboard/dashboard-ui/channels.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/channels.html
@@ -7,8 +7,8 @@
     <div id="channelsPage" data-role="page" class="page libraryPage channelsPage" data-contextname="${HeaderChannels}" data-require="scripts/channels">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="channelslatest.html" class="latestChannelItemsTab">${TabLatest}</a>
-            <a href="#" class="ui-btn-active">${TabChannels}</a>
+            <a href="channelslatest.html" class="latestChannelItemsTab"><i class="material-icons">new_releases</i>${TabLatest}</a>
+            <a href="#" class="ui-btn-active"><i class="material-icons">live_tv</i>${TabChannels}</a>
         </div>
 
         <div data-role="content">
