--- a/MediaBrowser.WebDashboard/dashboard-ui/channelslatest.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/channelslatest.html
@@ -9,8 +9,8 @@
         <link rel="import" href="thirdparty/paper-button/paper-button.html">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="#" class="ui-btn-active latestChannelItemsTab">${TabLatest}</a>
-            <a href="channels.html">${TabChannels}</a>
+            <a href="#" class="ui-btn-active latestChannelItemsTab"><i class="material-icons">new_releases</i>${TabLatest}</a>
+            <a href="channels.html"><i class="material-icons">live_tv</i>${TabChannels}</a>
         </div>
 
         <div data-role="content">
