--- a/MediaBrowser.WebDashboard/dashboard-ui/index.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/index.html
@@ -9,11 +9,11 @@
         <link rel="import" href="thirdparty/paper-button/paper-button.html">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="#" class="ui-btn-active">${TabHome}</a>
-            <a href="homelatest.html">${TabLatest}</a>
-            <a href="tvrecommended.html">${TabNextUp}</a>
-            <a href="favorites.html">${TabFavorites}</a>
-            <a href="tvupcoming.html">${TabUpcoming}</a>
+            <a href="#" class="ui-btn-active"><i class="material-icons">home</i>${TabHome}</a>
+            <a href="homelatest.html"><i class="material-icons">new_releases</i>${TabLatest}</a>
+            <a href="tvrecommended.html"><i class="material-icons">navigate_next</i>${TabNextUp}</a>
+            <a href="favorites.html"><i class="material-icons">favorite</i>${TabFavorites}</a>
+            <a href="tvupcoming.html"><i class="material-icons">schedule</i>${TabUpcoming}</a>
         </div>
 
         <div data-role="content">
