--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
@@ -8,12 +8,12 @@
         <link rel="import" href="thirdparty/paper-button/paper-button.html">
 
         <div class="libraryViewNav">
-            <a href="livetvsuggested.html">${TabSuggestions}</a>
-            <a href="livetvguide.html">${TabGuide}</a>
-            <a href="livetvchannels.html">${TabChannels}</a>
-            <a href="livetvrecordings.html" class="ui-btn-active">${TabRecordings}</a>
-            <a href="livetvtimers.html">${TabScheduled}</a>
-            <a href="livetvseriestimers.html">${TabSeries}</a>
+            <a href="livetvsuggested.html"><i class="material-icons">info</i>${TabSuggestions}</a>
+            <a href="livetvguide.html"><i class="material-icons">grid_on</i>${TabGuide}</a>
+            <a href="livetvchannels.html"><i class="material-icons">live_tv</i>${TabChannels}</a>
+            <a href="livetvrecordings.html" class="ui-btn-active"><i class="material-icons">slideshow</i>${TabRecordings}</a>
+            <a href="livetvtimers.html"><i class="material-icons">schedule</i>${TabScheduled}</a>
+            <a href="livetvseriestimers.html"><i class="material-icons">refresh</i>${TabSeries}</a>
         </div>
         <div data-role="content">
             <div class="ehsContent">
