--- a/MediaBrowser.WebDashboard/dashboard-ui/mysyncjob.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mysyncjob.html
@@ -7,7 +7,7 @@
     <div id="mySyncJobPage" data-role="page" class="page libraryPage syncJobPage mySyncPage" data-contextname="${TitleSync}" data-require="scripts/syncjob">
 
         <div class="libraryViewNav">
-            <a href="mysync.html" class="ui-btn-active">${TabSyncJobs}</a>
+            <a href="mysync.html" class="ui-btn-active"><i class="material-icons">refresh</i>${TabSyncJobs}</a>
         </div>
 
         <div data-role="content">
