--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvrecordings.html
@@ -25,7 +25,7 @@
                 <div id="latestRecordings" style="display: none;">
                     <div>
                         <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestRecordings}</h1>
-                        <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><i class="fa fa-refresh"></i>${ButtonSync}</paper-button>
+                        <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
                     </div>
                     <div class="recordingItems itemsContainer"></div>
                     <br />
