--- a/MediaBrowser.WebDashboard/dashboard-ui/moviesrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviesrecommended.html
@@ -23,7 +23,7 @@
                 <div id="resumableSection" style="display: none;" class="homePageSection">
                     <div>
                         <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderResume}</h1>
-                        <paper-button raised class="submit mini categorySyncButton" data-category="Resume"><i class="fa fa-refresh"></i>${ButtonSync}</paper-button>
+                        <paper-button raised class="submit mini categorySyncButton" data-category="Resume"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
                     </div>
 
                     <div id="resumableItems" class="itemsContainer">
@@ -33,7 +33,7 @@
                 <div class="homePageSection">
                     <div>
                         <h1 class="listHeader" style="display:inline-block;vertical-align:middle;">${HeaderLatestMovies}</h1>
-                        <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><i class="fa fa-refresh"></i>${ButtonSync}</paper-button>
+                        <paper-button raised class="submit mini categorySyncButton" data-category="Latest"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
                     </div>
 
                     <div id="recentlyAddedItems" class="itemsContainer">
