--- a/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/itemdetails.html
@@ -33,13 +33,13 @@
 
         <div id="movieTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="moviesrecommended.html">${TabSuggestions}</a>
-                <a href="movies.html" class="lnkMovies">${TabMovies}</a>
-                <a href="movietrailers.html" class="lnkMovieTrailers movieTrailersTab">${TabTrailers}</a>
-                <a href="collections.html?context=movies" class="lnkCollections">${TabCollections}</a>
-                <a href="moviegenres.html">${TabGenres}</a>
-                <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
-                <a href="moviestudios.html" class="movieStudiosTab">${TabStudios}</a>
+                <a href="moviesrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
+                <a href="movies.html" class="lnkMovies"><i class="material-icons">local_movies</i>${TabMovies}</a>
+                <a href="movietrailers.html" class="movieTrailersTab lnkMovieTrailers"><i class="material-icons">movie</i>${TabTrailers}</a>
+                <a href="collections.html?context=movies" class="lnkCollections"><i class="material-icons">video_library</i>${TabCollections}</a>
+                <a href="moviegenres.html"><i class="material-icons">video_library</i>${TabGenres}</a>
+                <a href="moviepeople.html" class="moviePeopleTab"><i class="material-icons">people</i>${TabPeople}</a>
+                <a href="moviestudios.html" class="movieStudiosTab"><i class="material-icons">account_box</i>${TabStudios}</a>
             </div>
         </div>
         <div class="itemTabs photoTabs" style="display: none;">
@@ -51,47 +51,47 @@
         </div>
         <div id="tvShowsTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="tvrecommended.html">${TabSuggestions}</a>
-                <a href="tvlatest.html">${TabLatest}</a>
-                <a href="tvupcoming.html">${TabUpcoming}</a>
-                <a href="tvshows.html" class="ui-btn-active">${TabShows}</a>
-                <a href="episodes.html" class="tvEpisodesTab">${TabEpisodes}</a>
-                <a href="tvgenres.html">${TabGenres}</a>
-                <a href="tvpeople.html" class="tvPeopleTab">${TabPeople}</a>
-                <a href="tvstudios.html" class="tvStudiosTab">${TabNetworks}</a>
+                <a href="tvrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
+                <a href="tvlatest.html"><i class="material-icons">new_releases</i>${TabLatest}</a>
+                <a href="tvupcoming.html"><i class="material-icons">schedule</i>${TabUpcoming}</a>
+                <a href="tvshows.html" class="ui-btn-active"><i class="material-icons">live_tv</i>${TabShows}</a>
+                <a href="episodes.html" class="tvEpisodesTab"><i class="material-icons">slideshow</i>${TabEpisodes}</a>
+                <a href="tvgenres.html"><i class="material-icons">video_library</i>${TabGenres}</a>
+                <a href="tvpeople.html" class="tvPeopleTab"><i class="material-icons">people</i>${TabPeople}</a>
+                <a href="tvstudios.html" class="tvStudiosTab"><i class="material-icons">account_box</i>${TabNetworks}</a>
             </div>
         </div>
         <div id="songTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="musicrecommended.html">${TabSuggestions}</a>
-                <a href="musicalbums.html">${TabAlbums}</a>
-                <a href="musicalbumartists.html">${TabAlbumArtists}</a>
-                <a href="musicartists.html" class="musicArtistsTab">${TabArtists}</a>
-                <a href="songs.html" class="ui-btn-active musicSongsTab">${TabSongs}</a>
-                <a href="musicgenres.html">${TabGenres}</a>
-                <a href="musicvideos.html">${TabMusicVideos}</a>
+                <a href="musicrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
+                <a href="musicalbums.html"><i class="material-icons">album</i>${TabAlbums}</a>
+                <a href="musicalbumartists.html"><i class="material-icons">music_note</i>${TabAlbumArtists}</a>
+                <a href="musicartists.html" class="musicArtistsTab"><i class="material-icons">music_note</i>${TabArtists}</a>
+                <a href="songs.html" class="ui-btn-active musicSongsTab"><i class="material-icons">music_note</i>${TabSongs}</a>
+                <a href="musicgenres.html"><i class="material-icons">library_music</i>${TabGenres}</a>
+                <a href="musicvideos.html"><i class="material-icons">video_library</i>${TabMusicVideos}</a>
             </div>
         </div>
         <div id="albumTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="musicrecommended.html">${TabSuggestions}</a>
-                <a href="musicalbums.html" class="ui-btn-active">${TabAlbums}</a>
-                <a href="musicalbumartists.html">${TabAlbumArtists}</a>
-                <a href="musicartists.html" class="musicArtistsTab">${TabArtists}</a>
-                <a href="songs.html" class="musicSongsTab">${TabSongs}</a>
-                <a href="musicgenres.html">${TabGenres}</a>
-                <a href="musicvideos.html">${TabMusicVideos}</a>
+                <a href="musicrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
+                <a href="musicalbums.html" class="ui-btn-active"><i class="material-icons">album</i>${TabAlbums}</a>
+                <a href="musicalbumartists.html"><i class="material-icons">music_note</i>${TabAlbumArtists}</a>
+                <a href="musicartists.html" class="musicArtistsTab"><i class="material-icons">music_note</i>${TabArtists}</a>
+                <a href="songs.html" class="musicSongsTab"><i class="material-icons">music_note</i>${TabSongs}</a>
+                <a href="musicgenres.html"><i class="material-icons">library_music</i>${TabGenres}</a>
+                <a href="musicvideos.html"><i class="material-icons">video_library</i>${TabMusicVideos}</a>
             </div>
         </div>
         <div id="musicVideoTabs" class="itemTabs" style="display: none;">
             <div class="libraryViewNav scopedLibraryViewNav">
-                <a href="musicrecommended.html">${TabSuggestions}</a>
+                <a href="musicrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
                 <a href="musicalbums.html">${TabAlbums}</a>
-                <a href="musicalbumartists.html">${TabAlbumArtists}</a>
-                <a href="musicartists.html" class="musicArtistsTab">${TabArtists}</a>
-                <a href="songs.html" class="musicSongsTab">${TabSongs}</a>
-                <a href="musicgenres.html">${TabGenres}</a>
-                <a href="musicvideos.html" class="ui-btn-active">${TabMusicVideos}</a>
+                <a href="musicalbumartists.html"><i class="material-icons">music_note</i>${TabAlbumArtists}</a>
+                <a href="musicartists.html" class="musicArtistsTab"><i class="material-icons">music_note</i>${TabArtists}</a>
+                <a href="songs.html" class="musicSongsTab"><i class="material-icons">music_note</i>${TabSongs}</a>
+                <a href="musicgenres.html"><i class="material-icons">library_music</i>${TabGenres}</a>
+                <a href="musicvideos.html" class="ui-btn-active"><i class="material-icons">video_library</i>${TabMusicVideos}</a>
             </div>
         </div>
         <div id="gameTabs" class="itemTabs" style="display: none;">
@@ -145,7 +145,7 @@
                             </span>
                             <paper-button raised class="secondary btnPlay hide"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlay}</span></paper-button>
                             <paper-button raised class="alt btnPlayTrailer hide"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlayTrailer}</span></paper-button>
-                            <a class="btnPlayExternalTrailer hide" data-role="button" data-icon="video" data-inline="true" data-mini="true" href="#" target="_blank">${ButtonPlayTrailer}</a>
+                            <a class="btnPlayExternalTrailer hide clearLink" href="#" target="_blank"><paper-button raised class="alt btnPlayExternalTrailer"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlayTrailer}</span></paper-button></a>
                             <paper-button raised class="submit btnSync hide"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
                             <paper-button raised class="subdued btnMoreCommands hide notext"><iron-icon icon="more-vert"></iron-icon></paper-button>
                         </div>
@@ -171,9 +171,9 @@
                             </span>
                             <paper-button raised class="secondary btnPlay hide"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlay}</span></paper-button>
                             <paper-button raised class="alt btnPlayTrailer hide"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlayTrailer}</span></paper-button>
-                            <a class="btnPlayExternalTrailer hide" data-role="button" data-icon="video" data-inline="true" data-mini="true" href="#" target="_blank">${ButtonPlayTrailer}</a>
+                            <a class="btnPlayExternalTrailer hide clearLink" href="#" target="_blank"><paper-button raised class="alt btnPlayExternalTrailer"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlayTrailer}</span></paper-button></a>
                             <paper-button raised class="submit btnSync hide"><iron-icon icon="refresh"></iron-icon><span>${ButtonSync}</span></paper-button>
-                            <paper-button raised class="subdued btnMoreCommands hide notext"><iron-icon icon="more-vert"></iron-icon></paper-button>
+                            <paper-button raised class="subdued btnMoreCommands forceHide notext"><iron-icon icon="more-vert"></iron-icon></paper-button>
                         </div>
                         <p id="artist"></p>
                         <p class="itemGenres"></p>
