--- a/MediaBrowser.WebDashboard/dashboard-ui/moviesrecommended.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviesrecommended.html
@@ -9,13 +9,13 @@
         <link rel="import" href="thirdparty/paper-button/paper-button.html">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="#" class="ui-btn-active">${TabSuggestions}</a>
-            <a href="movies.html">${TabMovies}</a>
-            <a href="movietrailers.html" class="movieTrailersTab">${TabTrailers}</a>
-            <a href="collections.html?context=movies">${TabCollections}</a>
-            <a href="moviegenres.html">${TabGenres}</a>
-            <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
-            <a href="moviestudios.html" class="movieStudiosTab">${TabStudios}</a>
+            <a href="#" class="ui-btn-active"><i class="material-icons">info</i>${TabSuggestions}</a>
+            <a href="movies.html"><i class="material-icons">local_movies</i>${TabMovies}</a>
+            <a href="movietrailers.html" class="movieTrailersTab"><i class="material-icons">movie</i>${TabTrailers}</a>
+            <a href="collections.html?context=movies"><i class="material-icons">video_library</i>${TabCollections}</a>
+            <a href="moviegenres.html"><i class="material-icons">video_library</i>${TabGenres}</a>
+            <a href="moviepeople.html" class="moviePeopleTab"><i class="material-icons">people</i>${TabPeople}</a>
+            <a href="moviestudios.html" class="movieStudiosTab"><i class="material-icons">account_box</i>${TabStudios}</a>
         </div>
         <div data-role="content">
 
