--- a/MediaBrowser.WebDashboard/dashboard-ui/notificationlist.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/notificationlist.html
@@ -4,7 +4,7 @@
     <title>${TitleNotifications}</title>
 </head>
 <body>
-    <div id="notificationsPage" data-role="page" class="page libraryPage noSecondaryNavPage" data-require="scripts/notificationlist">
+    <div id="notificationsPage" data-role="page" class="page libraryPage noSecondaryNavPage" data-require="scripts/notificationlist,paperbuttonstyle">
 
         <div data-role="content">
 
