--- a/MediaBrowser.WebDashboard/dashboard-ui/collections.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/collections.html
@@ -7,13 +7,13 @@
     <div id="boxsetsPage" data-role="page" class="page libraryPage backdropPage collectionEditorPage" data-backdroptype="movie,boxset">
 
         <div class="libraryViewNav scopedLibraryViewNav movieTabs">
-            <a href="moviesrecommended.html">${TabSuggestions}</a>
-            <a href="movies.html">${TabMovies}</a>
-            <a href="movietrailers.html" class="movieTrailersTab">${TabTrailers}</a>
-            <a href="#" class="ui-btn-active">${TabCollections}</a>
-            <a href="moviegenres.html">${TabGenres}</a>
-            <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
-            <a href="moviestudios.html" class="movieStudiosTab">${TabStudios}</a>
+            <a href="moviesrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
+            <a href="movies.html"><i class="material-icons">local_movies</i>${TabMovies}</a>
+            <a href="movietrailers.html" class="movieTrailersTab"><i class="material-icons">movie</i>${TabTrailers}</a>
+            <a href="#" class="ui-btn-active"><i class="material-icons">video_library</i>${TabCollections}</a>
+            <a href="moviegenres.html"><i class="material-icons">video_library</i>${TabGenres}</a>
+            <a href="moviepeople.html" class="moviePeopleTab"><i class="material-icons">people</i>${TabPeople}</a>
+            <a href="moviestudios.html" class="movieStudiosTab"><i class="material-icons">account_box</i>${TabStudios}</a>
         </div>
 
         <div class="libraryViewNav scopedLibraryViewNav collectionTabs">
