--- a/MediaBrowser.WebDashboard/dashboard-ui/episodes.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/episodes.html
@@ -7,14 +7,14 @@
     <div id="episodesPage" data-role="page" class="page libraryPage" data-require="scripts/episodes">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="tvrecommended.html">${TabSuggestions}</a>
-            <a href="tvlatest.html">${TabLatest}</a>
-            <a href="tvupcoming.html">${TabUpcoming}</a>
-            <a href="tvshows.html">${TabShows}</a>
-            <a href="#" class="ui-btn-active">${TabEpisodes}</a>
-            <a href="tvgenres.html">${TabGenres}</a>
-            <a href="tvpeople.html" class="tvPeopleTab">${TabPeople}</a>
-            <a href="tvstudios.html" class="tvStudiosTab">${TabNetworks}</a>
+            <a href="tvrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
+            <a href="tvlatest.html"><i class="material-icons">new_releases</i>${TabLatest}</a>
+            <a href="tvupcoming.html"><i class="material-icons">schedule</i>${TabUpcoming}</a>
+            <a href="tvshows.html"><i class="material-icons">live_tv</i>${TabShows}</a>
+            <a href="#" class="ui-btn-active"><i class="material-icons">slideshow</i>${TabEpisodes}</a>
+            <a href="tvgenres.html"><i class="material-icons">video_library</i>${TabGenres}</a>
+            <a href="tvpeople.html" class="tvPeopleTab"><i class="material-icons">people</i>${TabPeople}</a>
+            <a href="tvstudios.html" class="tvStudiosTab"><i class="material-icons">account_box</i>${TabNetworks}</a>
         </div>
 
         <div class="alphabetPicker">
