--- a/MediaBrowser.WebDashboard/dashboard-ui/moviestudios.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/moviestudios.html
@@ -7,13 +7,13 @@
     <div id="movieStudiosPage" data-role="page" class="page libraryPage" data-require="scripts/moviestudios">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="moviesrecommended.html">${TabSuggestions}</a>
-            <a href="movies.html">${TabMovies}</a>
-            <a href="movietrailers.html" class="movieTrailersTab">${TabTrailers}</a>
-            <a href="collections.html?context=movies">${TabCollections}</a>
-            <a href="moviegenres.html">${TabGenres}</a>
-            <a href="moviepeople.html" class="moviePeopleTab">${TabPeople}</a>
-            <a href="#" class="ui-btn-active">${TabStudios}</a>
+            <a href="moviesrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
+            <a href="movies.html"><i class="material-icons">local_movies</i>${TabMovies}</a>
+            <a href="movietrailers.html" class="movieTrailersTab"><i class="material-icons">movie</i>${TabTrailers}</a>
+            <a href="collections.html?context=movies"><i class="material-icons">video_library</i>${TabCollections}</a>
+            <a href="moviegenres.html"><i class="material-icons">video_library</i>${TabGenres}</a>
+            <a href="moviepeople.html" class="moviePeopleTab"><i class="material-icons">people</i>${TabPeople}</a>
+            <a href="#" class="ui-btn-active"><i class="material-icons">account_box</i>${TabStudios}</a>
         </div>
 
         <div data-role="content">
