--- a/MediaBrowser.WebDashboard/dashboard-ui/tvlatest.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/tvlatest.html
@@ -8,14 +8,14 @@
         <link rel="import" href="thirdparty/paper-button/paper-button.html">
 
         <div class="libraryViewNav scopedLibraryViewNav">
-            <a href="tvrecommended.html">${TabSuggestions}</a>
-            <a href="#" class="ui-btn-active">${TabLatest}</a>
-            <a href="tvupcoming.html">${TabUpcoming}</a>
-            <a href="tvshows.html">${TabShows}</a>
-            <a href="episodes.html" class="tvEpisodesTab">${TabEpisodes}</a>
-            <a href="tvgenres.html">${TabGenres}</a>
-            <a href="tvpeople.html" class="tvPeopleTab">${TabPeople}</a>
-            <a href="tvstudios.html" class="tvStudiosTab">${TabNetworks}</a>
+            <a href="tvrecommended.html"><i class="material-icons">info</i>${TabSuggestions}</a>
+            <a href="#" class="ui-btn-active"><i class="material-icons">new_releases</i>${TabLatest}</a>
+            <a href="tvupcoming.html"><i class="material-icons">schedule</i>${TabUpcoming}</a>
+            <a href="tvshows.html"><i class="material-icons">live_tv</i>${TabShows}</a>
+            <a href="episodes.html" class="tvEpisodesTab"><i class="material-icons">slideshow</i>${TabEpisodes}</a>
+            <a href="tvgenres.html"><i class="material-icons">video_library</i>${TabGenres}</a>
+            <a href="tvpeople.html" class="tvPeopleTab"><i class="material-icons">people</i>${TabPeople}</a>
+            <a href="tvstudios.html" class="tvStudiosTab"><i class="material-icons">account_box</i>${TabNetworks}</a>
         </div>
         <div data-role="content">
             <div class="ehsContent">
