--- a/MediaBrowser.WebDashboard/dashboard-ui/myprofile.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/myprofile.html
@@ -4,7 +4,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="userImagePage" data-role="page" class="page libraryPage userPreferencesPage userPasswordPage" data-contextname="${HeaderPreferences}" data-require="scripts/myprofile,scripts/mypreferencescommon,paperbuttonstyle">
+    <div id="userImagePage" data-role="page" class="page libraryPage userPreferencesPage userPasswordPage" data-contextname="${HeaderPreferences}" data-require="scripts/myprofile,scripts/mypreferencescommon,paperbuttonstyle,jqmicons">
 
         <link rel="import" href="thirdparty/paper-button/paper-button.html">
 
