--- a/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesdisplay.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/mypreferencesdisplay.html
@@ -5,7 +5,7 @@
     <title>Emby</title>
 </head>
 <body>
-    <div id="displayPreferencesPage" data-role="page" class="page libraryPage userPreferencesPage" data-contextname="${HeaderPreferences}" data-require="scripts/mypreferencesdisplay,scripts/mypreferencescommon,paperbuttonstyle">
+    <div id="displayPreferencesPage" data-role="page" class="page libraryPage userPreferencesPage" data-contextname="${HeaderPreferences}" data-require="scripts/mypreferencesdisplay,scripts/mypreferencescommon,paperbuttonstyle,jqmicons">
         <link rel="import" href="thirdparty/paper-button/paper-button.html">
 
         <div class="libraryViewNav">
