--- a/MediaBrowser.WebDashboard/dashboard-ui/collections.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/collections.html
@@ -33,6 +33,8 @@
             <div class="noItemsMessage" style="display: none; text-align: center;">
                 <p>${MessageNoCollectionsAvailable}</p>
             </div>
+
+            <paper-fab class="btnNewCollection" icon="add" style="position:fixed;bottom:60px;right:30px;background-color:#db4437;"></paper-fab>
         </div>
 
         <div data-role="panel" class="viewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
@@ -54,7 +56,7 @@
                             <option value="List">${OptionList}</option>
                             <option value="Thumb">${OptionThumb}</option>
                             <option value="ThumbCard">${OptionThumbCard}</option>
-                       </select>
+                        </select>
                     </div>
                     <br />
                     <div>
