--- a/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-in.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/vulcanize-in.html
@@ -8,4 +8,5 @@
 <link rel="import" href="bower_components/neon-animation/animations/fade-out-animation.html">
 <link rel="import" href="bower_components/neon-animation/animations/fade-in-animation.html">
 <link rel="import" href="bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="bower_components/paper-drawer-panel/paper-drawer-panel.html">
 <link rel="import" href="thirdparty/emby-icons.html">
