--- a/MediaBrowser.WebDashboard/dashboard-ui/livetvprogram.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/livetvprogram.html
@@ -39,13 +39,13 @@
         </div>
         <div class="detailButtonsContainer">
             <span id="playButtonContainer" style="display: none;">
-                <button id="btnPlay" type="button" data-icon="play" data-inline="true" data-mini="true">${ButtonPlay}</button>
+                <paper-button raised class="secondary btnPlay"><iron-icon icon="play-arrow"></iron-icon><span>${ButtonPlay}</span></paper-button>
             </span>
             <span id="cancelRecordingButtonContainer" style="display: none;">
-                <button id="btnCancelRecording" type="button" data-icon="delete" data-inline="true" data-mini="true">${ButtonCancelRecording}</button>
+                <paper-button raised class="subdued btnCancelRecording"><iron-icon icon="delete"></iron-icon><span>${ButtonCancelRecording}</span></paper-button>
             </span>
             <span id="recordButtonContainer" style="display: none;">
-                <button id="btnRecord" type="button" data-icon="video" data-inline="true" data-mini="true">${ButtonRecord}</button>
+                <paper-button raised class="subdued btnRecord"><iron-icon icon="videocam"></iron-icon><span>${ButtonRecord}</span></paper-button>
             </span>
         </div>
         <div data-role="content">
