--- a/MediaBrowser.WebDashboard/dashboard-ui/movietrailers.html
+++ b/MediaBrowser.WebDashboard/dashboard-ui/movietrailers.html
@@ -25,7 +25,7 @@
                 <button class="btnTrailerReel" type="button" data-icon="play" data-inline="true" data-mini="true">${ButtonTrailerReel}</button>
             </div>
             <div id="items" class="itemsContainer paddedItemsContainer"></div>
-            <p class="noItemsMessage" style="display:none;">${MessageNoTrailersFound}</p>
+            <p class="noItemsMessage" style="display:none;text-align:center;">${MessageNoTrailersFound}</p>
         </div>
 
         <div data-role="panel" class="viewPanel" data-theme="a" data-position="right" data-display="overlay" data-position-fixed="true">
